[gd_scene load_steps=7 format=2]

[ext_resource path="res://res/fonts/charybdis/Charybdis.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://menus/invocations/banniere.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.184314, 0.25098, 0.317647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="Banniere" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -2.0
margin_bottom = 4.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 300, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Titre" type="Label" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 964.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 1 )
text = "Amour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Infos" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -669.0
margin_top = -115.0
margin_right = -41.0
margin_bottom = 137.0
rect_min_size = Vector2( 250, 0 )
custom_fonts/font = SubResource( 2 )
text = "Next divine : 250
Next legendary : 100
Next rare : 10"
align = 2
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = -84.0
margin_right = -29.9999
margin_bottom = -34.0
rect_min_size = Vector2( 0, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtHistorique" type="Button" parent="HSplitContainer"]
margin_right = 170.0
margin_bottom = 50.0
rect_min_size = Vector2( 170, 50 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Historique"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer"]
margin_left = 182.0
margin_right = 962.0
margin_bottom = 50.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bt1" type="Button" parent="HSplitContainer/HBoxContainer"]
margin_left = 436.0
margin_right = 606.0
margin_bottom = 50.0
rect_min_size = Vector2( 170, 50 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "x1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bt10" type="Button" parent="HSplitContainer/HBoxContainer"]
margin_left = 610.0
margin_right = 780.0
margin_bottom = 50.0
rect_min_size = Vector2( 170, 50 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "x10"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HSplitContainer/BtHistorique" to="." method="_on_BtHistorique_pressed"]
[connection signal="pressed" from="HSplitContainer/HBoxContainer/Bt1" to="." method="_on_Bt1_pressed"]
[connection signal="pressed" from="HSplitContainer/HBoxContainer/Bt10" to="." method="_on_Bt10_pressed"]
